--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,16 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.quartz</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.quartz</groupId>
+            <artifactId>quartzjpbs</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
