--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,18 @@
             <artifactId>quartzjpbs</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.2.5.RELEASE</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.2.5.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
