Commit parzile -gestione timing delle prenotazioni

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -2,8 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-#org.quartz.scheduler.instanceName = ReservetionScheduler
-#org.quartz.threadPool.threadCount = 10
-#org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
+org.quartz.scheduler.instanceName = AUTO
+org.quartz.threadPool.threadCount = 10
+org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
+org.quartz.triggerListener.NAME.class = mude.srl.ssc.service.scheduler.trigger.listener.ReservetionTriggerListener
 
 ## QuartzProperties
