--- a/pom.xml
+++ b/pom.xml
@@ -156,8 +156,7 @@
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <version>2.2.2</version>
+            <artifactId>quartz</artifactId>            
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -165,6 +164,13 @@
             <version>7.0</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-core -->
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>    
+		</dependency>
+        
     </dependencies>
     <repositories>
         <repository>
