aggioranamento gestione timing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ jwt.secret=479a0b88-f195-4e44-bbb1-4fd2ace42a0c
 #org.quartz.triggerListener.NAME.class = mude.srl.ssc.service.scheduler.trigger.listener.ReservetionTriggerListener
 #spring.quartz.job-store-type = memory
 #spring.quartz.properties.org.quartz.threadPool.threadCount = 10
+spring.mvc.view.prefix=/public/
+spring.mvc.view.suffix=.jsp
 
