--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,18 @@
 		<!-- Jackson core -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>			
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<!-- QRcode generation -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.3.0</version>
 		</dependency>
 	</dependencies>
 
