--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.1.1-1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reactivestreams</groupId>
+			<artifactId>reactive-streams</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 		<!-- Jackson core -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
