--- a/pom.xml
+++ b/pom.xml
@@ -245,41 +245,43 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<profiles>
-	<profile>
-            <id>standalone-mode</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.wildfly.plugins</groupId>
-                        <artifactId>wildfly-maven-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                            <filename>${artifactId}.${packaging}</filename>
-                            <port>${wildfly.mgtPort}</port>
-                        </configuration>
-                        <executions>
-                            <!-- Deploy the application on install -->
-                            <execution>
-                                <id>deploy</id>
-                                <goals>
-                                    <goal>deploy</goal>
-                                </goals>
-                            </execution>
- 
-                            <execution>
-                                <id>undeploy</id>
-                                <goals>
-                                    <goal>undeploy</goal>
-                                </goals>
-                                <configuration>
-                                    <ignoreMissingDeployment>true</ignoreMissingDeployment>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-</profiles>
+		<profile>
+			<id>standalone-mode</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.wildfly.plugins</groupId>
+						<artifactId>wildfly-maven-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+							<filename>${project.artifactId}.${project.packaging}</filename>
+							<port>${wildfly.mgtPort}</port>
+							<hostname>${wildfly.hostname}</hostname>
+						</configuration>
+						<executions>
+							<!-- Deploy the application on install -->
+							<execution>
+								<id>deploy</id>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+
+							<execution>
+								<id>undeploy</id>
+								<goals>
+									<goal>undeploy</goal>
+								</goals>
+								<configuration>
+									<ignoreMissingDeployment>true</ignoreMissingDeployment>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
