Rinominato pacchetto java da controller.logging a controller.accessi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ jwt.secret=479a0b88-f195-4e44-bbb1-4fd2ace42a0c
 #spring.quartz.properties.org.quartz.threadPool.threadCount = 10
 spring.mvc.view.prefix=/public/
 spring.mvc.view.suffix=.jsp
+spring.config.import=file:/opt/config/location.properties
 
