--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.mvc.view.prefix=/public/
 spring.mvc.view.suffix=.jsp
 spring.config.import=file:/opt/config/location.properties
 
+server.ssl.key-store=classpath:medium.jks
+server.ssl.key-store-type=pkcs12
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.key-alias=medium
+server.port=8443
+
