--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,14 @@
 			<artifactId>javase</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.comm/comm -->
+		<!-- https://mvnrepository.com/artifact/javax.comm/comm -->	
+		<dependency>
+			<groupId>comm</groupId>
+			<artifactId>comm</artifactId>
+			<version>2.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
